# bloblog

./: .gitignore  Dockerfile  README.md  config.yaml  pyproject.toml
.devcontainer/: devcontainer.json
src/bloblog/: __main__.py
src/bloblog/config/: config_manager.py
src/bloblog/metadata/: client_factory.py  dynamodb_client.py  file_metadata.py  metadata_client.py
src/bloblog/storage/: s3_client.py
src/bloblog/sync/: file_synchronizer.py  task_queue.py
tests/cases/: test_config_manager.py  test_file_synchronizer.py  test_s3_client.py
tests/data/: test-config.yaml
